--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,7 @@ book:
     - index.qmd
     - part: contenido/2020/parte-2020.qmd
       chapters:
+        - contenido/2020/00-index.qmd
         - contenido/2020/01-datos.qmd
 
 format:
