--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,7 @@ book:
         - contenido/2020/00-index.qmd
         - contenido/2020/01-datos.qmd
         - contenido/2020/02-procesamiento.qmd
+        - contenido/2020/03-analisis.qmd
 
 format:
   html:
